--- a/backend/package.json
+++ b/backend/package.json
@@ -31,14 +31,18 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/cache-manager": "^3.4.3",
     "apollo-server-express": "^3.6.7",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^3.6.1",
+    "cache-manager-redis-store": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "graphql-upload": "^13.0.0",
     "iamport": "^0.3.4",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.2",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
@@ -59,6 +63,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/graphql-upload": "^8.0.11",
     "@types/jest": "27.4.1",
@@ -77,6 +82,7 @@
     "iamport-typings": "^1.3.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "redis": "^4.0.6",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
