--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,10 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "TZ=Asia/Seoul nest start",
+    "start:dev": "TZ=Asia/Seoul nest start --watch",
+    "start:debug": "TZ=Asia/Seoul nest start --debug --watch",
+    "start:prod": "TZ=Asia/Seoul node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,11 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.1.0",
     "@google-cloud/storage": "^5.19.2",
     "@nestjs/apollo": "^10.0.8",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/elasticsearch": "^8.1.0",
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
@@ -40,6 +43,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
+    "graphql-type-json": "^0.3.2",
     "graphql-upload": "^13.0.0",
     "iamport": "^0.3.4",
     "jsonwebtoken": "^8.5.1",
