커스텀 매핑 옵션 추가

--- a/backend/src/apis/코드 저장소/logstash.conf
+++ b/backend/src/apis/코드 저장소/logstash.conf
@@ -46,34 +46,12 @@ filter {
 # }
 #     }
 ruby{
-    code => 'event.set("name",event.get("tagname").split(","))
-             event.set("tag",event.get("tagid").split(","))'
-
-    # code => 'event.set("tag",event.get("tagid").split(","))'
-    # code => "event.set('tag', event.get('tagid').split(','))"
-    # code => "event.set('name', event.get('tagname').split(','))"
-    # 'postTags = Array.new # []
-    #          ps = Hash.new
-    #          tagname = event.get("tagname").split(",")
-    #          tag = event.get("tagid").split(",")
-    #          event.set("name",tagname)
-    #          event.set("tag",tag)
-    #          i = 1
-    #          while i < tag.length
-    #          ps = { "name" => tagname[i], "tag" => tag[i]} 
-    #          i = i + 1
-    #          end
-    #          postTags.push(ps)
-    #          event.set("check",postTags)'
+    code => "event.set('tag', event.get('tagid').split(','))"
+    code => "event.set('name', event.get('tagname').split(','))"
     
 }
-# event.set("name",event.get("tagname").split(","))
-#              event.set("tag",event.get("tagid").split(","))
-# ruby{
-#     code => 'event.set("name",evnet.get("tagname").split(","))'
-# }
     mutate {
-        remove_field => ["@version","@timestamp","useruserid","tagname","tagid"] 
+        remove_field => ["@version","@timestamp","useruserid"] 
         # add_field => { "postTagsq" => ["1","2","3"]}
         # add_field => { "postTagArr" => {"%{tagid}":"3"}} 
         # add_field => {"postTags" => "%{tagid}"}
@@ -98,10 +76,6 @@ output {
         index => "post"
         # document_type => "message_logs"
         document_id => "%{post_id}"
-        manage_template => true
-        template => "/usr/share/logstash/post_template.json"
-        template_name => "post"
-        template_overwrite => true
     }
     # redis{
     #     host => "127.0.0.1"
